--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                                             <i class="fa fa-book"></i>
                                         </div>
                                         <div class="list_item_text">
-                                            <h5><a href="" target="_blank" class="btn btn-primary"> Homework 5 </a> </h5>
+                                            <h5><a href="https://harshypatel.github.io/multiplication_table/" target="_blank" class="btn btn-primary"> Homework 5 </a> </h5>
                                         </div>
                                     </div>
 									<div class="choose_list_item fix m-top-40">
