--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                                             <i class="fa fa-book"></i>
                                         </div>
                                         <div class="list_item_text">
-                                            <h5><a href="http://cs.uml.edu/~hpatel2/hw2/old_index.html" target="_blank" class="btn btn-primary"> Homework 2 </a> </h5>
+                                            <h5><a href="http://harshypatel.github.io/hw2/old_index.html" target="_blank" class="btn btn-primary"> Homework 2 </a> </h5>
                                         </div>
                                     </div>
                                     <div class="choose_list_item fix m-top-40">
@@ -294,7 +294,7 @@
                                             <i class="fa fa-book"></i>
                                         </div>
                                         <div class="list_item_text">
-                                            <h5><a href="http://cs.uml.edu/~hpatel2/hw3/index.html" target="_blank" class="btn btn-primary"> Homework 3 </a> </h5>
+                                            <h5><a href="http://harshypatel.github.io/hw3/index.html" target="_blank" class="btn btn-primary"> Homework 3 </a> </h5>
                                         </div>
                                     </div>
                                     <div class="choose_list_item fix m-top-40">
@@ -302,7 +302,7 @@
                                             <i class="fa fa-book"></i>
                                         </div>
                                         <div class="list_item_text">
-                                            <h5><a href="http://cs.uml.edu/~hpatel2/index.html" target="_blank" class="btn btn-primary"> Homework 4 </a> </h5>
+                                            <h5><a href="http://harshypatel.github.io/website" target="_blank" class="btn btn-primary"> Homework 4 </a> </h5>
                                         </div>
                                     </div>
 									<div class="choose_list_item fix m-top-40">
@@ -310,7 +310,7 @@
                                             <i class="fa fa-book"></i>
                                         </div>
                                         <div class="list_item_text">
-                                            <h5><a href="https://harshypatel.github.io/multiplication_table/" target="_blank" class="btn btn-primary"> Homework 5 </a> </h5>
+                                            <h5><a href="https://harshypatel.github.io/website/hw5/index.html" target="_blank" class="btn btn-primary"> Homework 5 </a> </h5>
                                         </div>
                                     </div>
 									<div class="choose_list_item fix m-top-40">
