--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                                             <i class="fa fa-book"></i>
                                         </div>
                                         <div class="list_item_text">
-                                            <h5><a href="http://harshypatel.github.io/hw2/old_index.html" target="_blank" class="btn btn-primary"> Homework 2 </a> </h5>
+                                            <h5><a href="http://harshypatel.github.io/website/hw2/old_index.html" target="_blank" class="btn btn-primary"> Homework 2 </a> </h5>
                                         </div>
                                     </div>
                                     <div class="choose_list_item fix m-top-40">
@@ -294,7 +294,7 @@
                                             <i class="fa fa-book"></i>
                                         </div>
                                         <div class="list_item_text">
-                                            <h5><a href="http://harshypatel.github.io/hw3/index.html" target="_blank" class="btn btn-primary"> Homework 3 </a> </h5>
+                                            <h5><a href="http://harshypatel.github.io/website/hw3/index.html" target="_blank" class="btn btn-primary"> Homework 3 </a> </h5>
                                         </div>
                                     </div>
                                     <div class="choose_list_item fix m-top-40">
