added both resumes
made changes to resume botton as well as added both resumes for testing

--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
 
 
             <nav class="navbar navbar-default bootsnav navbar-fixed black no-background">
-                <div class="container">  
+                <div class="container">
 
                     <div class="attr-nav">
                         <ul>
                             <li class="side-menu"><a href="#"><i class="fa fa-bars"></i></a></li>
                         </ul>
-                    </div>  
+                    </div>
 
 
                     <!-- Start Header Navigation -->
@@ -87,7 +87,7 @@
 
                     </div>
                     <!-- End Header Navigation -->
-                </div>   
+                </div>
 
 
                 <!-- Start Side Menu -->
@@ -128,11 +128,11 @@
                                     <a href="#about" class="btn btn-primary m-top-20">About Me</a>
                                 </div>
 
-                                <a class="mouse-scroll" href="#about"> 
+                                <a class="mouse-scroll" href="#about">
                                     <span class="mouse">
                                         <span class="mouse-movement"></span>
                                     </span>
-                                    <span class="mouse-message fadeIn">scroll</span> 
+                                    <span class="mouse-message fadeIn">scroll</span>
                                 </a>
                             </div>
                         </div>
@@ -146,7 +146,7 @@
 
 
 
-            <!--About Section--> 
+            <!--About Section-->
             <section id="about" class="about bg-light roomy-150">
                 <div class="container">
                     <div class="row">
@@ -157,9 +157,9 @@
                                         <h2>About me</h2>
                                     </div>
                                     <div class="about_content_text">
-                                        <p>I'm currently an undergrad at UMass Lowell. This is my last semester. 
-										I am also working full-time as a software intern at RailPod Inc. 
-										 </p>
+                                        <p>I'm currently an undergrad at UMass Lowell. This is my last semester.
+										                       I am also working full-time as a software intern at RailPod Inc.
+										                    </p>
 
                                         <div class="divider1 m-top-10"></div>
 
@@ -192,7 +192,7 @@
                                 <div class="about_social m-top-50">
                                     <ul class="list-inline">
                                         <li><span class="divider"></span></li>
-					<li><a href="https://www.linkedin.com/in/harsh-patel-m4/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+					                              <li><a href="https://www.linkedin.com/in/harsh-patel-m4/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                                         <li><a href="https://github.com/harshypatel" target="_blank"><i class="fa fa-github"></i></a></li>
                                     </ul>
                                 </div>
@@ -229,7 +229,7 @@
                                                 <h5 class="m-top-30"> Middlesex Community College, Bedford, MA </h5>
                                             </div>
                                         </div>
-                                    </div> 
+                                    </div>
                                 </div>
                             </div><!-- End off col-md-6  -->
 
@@ -240,24 +240,27 @@
                                     </div>
 
                                     <div class="portfolio_content_text">
-										<h1> Software Intern </h1>
-                                        <p> Design, develop and deploy new product using Python or C++ for customers. <br> 
-										Develop new tools to reduce workload of the team members. <br>
-										Work with development team to refine clearance data. </p>
+										                    <h1> Software Intern </h1>
+                                        <p> Design, develop and deploy new product using Python or C++ for customers. <br>
+										                                        Develop new tools to reduce workload of the team members. <br>
+										                                        Work with development team to refine clearance data. </p>
                                         <p> Optimized data collection procedures and generated reports daily <br>
-										Analyzed rail track data for safer measurements <br>
-										Presented findings and data to team to improve strategies and operations <br>
-										Used Amazon EC2 terminal to perform taks quickly and efficiently </p>
-										<h1> Peer Math Tutor </h1>
-										<p> Monitored Math Center activity for up to 15 students at time <br>
-										Explained in detail concepts in easy-to-understand terms <br>
-										Worked with students of various ages at different learning levels </p>
+										                                        Analyzed rail track data for safer measurements <br>
+										                                        Presented findings and data to team to improve strategies and operations <br>
+										                                        Used Amazon EC2 terminal to perform taks quickly and efficiently </p>
+										                    <h1> Peer Math Tutor </h1>
+										                    <p> Monitored Math Center activity for up to 15 students at time <br>
+										                                        Explained in detail concepts in easy-to-understand terms <br>
+										                                        Worked with students of various ages at different learning levels </p>
                                     </div>
                                 </div>
                             </div><!-- End off col-md-6  -->
 
                             <div class="portfolio_btn text-center fix m-top-100">
-                                <a href="cs-resume-updated.pdf" target="_blank" class="btn btn-primary"> Resume </a>
+                                <a href="https://harshypatel.github.io/website/resume/cs-resume-front-end.pdf" target="_blank" class="btn btn-primary"> Resume - Front-End </a>
+                            </div>
+                            <div class="portfolio_btn text-center fix m-top-100">
+                                <a href="https://harshypatel.github.io/website/resume/cs-resume-general.pdf" target="_blank" class="btn btn-primary"> Resume - General </a>
                             </div>
                         </div>
                     </div><!-- End off row -->
