--- a/index.html
+++ b/index.html
@@ -219,13 +219,13 @@
                                     <div class="row m-top-60">
                                         <div class="col-sm-6">
                                             <div class="portf_item_text photography">
-                                                <a href="assets/images/portfolio-1.jpg" class="popup-img"><img src="assets/images/portfolio-1.png" alt="" /></a>
+                                                <a href="https://rail-pod.com/" target="_blank"><img src="assets/images/portfolio-1.png" alt="" /></a>
                                                 <h5 class="m-top-30"> RailPod Inc. </h5>
                                             </div>
                                         </div>
                                         <div class="col-sm-6">
                                             <div class="portf_item_text branding xs-m-top-40">
-                                                <a href="assets/images/portfolio-1.jpg" class="popup-img"><img src="assets/images/portfolio-2.jpg" alt="" /></a>
+                                                <a href="https://www.middlesex.mass.edu/ace/math.aspx" target="_blank"><img src="assets/images/portfolio-2.jpg" alt="" /></a>
                                                 <h5 class="m-top-30"> Middlesex Community College, Bedford, MA </h5>
                                             </div>
                                         </div>
@@ -255,12 +255,11 @@
                                     </div>
                                 </div>
                             </div><!-- End off col-md-6  -->
-
-                            <div class="portfolio_btn text-center fix m-top-100">
-                                <a href="https://harshypatel.github.io/website/resume/cs-resume-front-end.pdf" target="_blank" class="btn btn-primary"> Resume - Front-End </a>
-                            </div>
                             <div class="portfolio_btn text-center fix m-top-100">
                                 <a href="https://harshypatel.github.io/website/resume/cs-resume-general.pdf" target="_blank" class="btn btn-primary"> Resume - General </a>
+                            </div>
+                            <div class="portfolio_btn text-center fix m-top-100">
+                                <a href="https://harshypatel.github.io/website/resume/cs-resume-front-end.pdf" target="_blank" class="btn btn-primary"> Resume - Front-End </a>
                             </div>
                         </div>
                     </div><!-- End off row -->
