--- a/index.html
+++ b/index.html
@@ -320,7 +320,15 @@
                                             <i class="fa fa-book"></i>
                                         </div>
                                         <div class="list_item_text">
-                                            <h5><a href="" target="_blank" class="btn btn-primary"> Homework 6 </a> </h5>
+                                            <h5><a href="https://harshypatel.github.io/website/hw6/index.html" target="_blank" class="btn btn-primary"> Homework 6 </a> </h5>
+                                        </div>
+                                    </div>
+				    <div class="choose_list_item fix m-top-40">
+                                        <div class="choose_icon">
+                                            <i class="fa fa-book"></i>
+                                        </div>
+                                        <div class="list_item_text">
+                                            <h5><a href="" target="_blank" class="btn btn-primary"> Homework 7 </a> </h5>
                                         </div>
                                     </div>
                                 </div>
