added hw8 to main line

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                                             <i class="fa fa-book"></i>
                                         </div>
                                         <div class="list_item_text">
-                                            <h5><a href="" target="_blank" class="btn btn-primary"> Homework 8 </a> </h5>
+                                            <h5><a href="https://harshypatel.github.io/website/hw8/index.html" target="_blank" class="btn btn-primary"> Homework 8 </a> </h5>
                                         </div>
                                     </div>
                                 </div>
