--- a/hw8/index.html
+++ b/hw8/index.html
@@ -59,7 +59,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.2/dist/jquery.validate.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-	<script src="js/scrabble_Pieces.js"></script>
+	<script src="js/Scrabble_Pieces.js"></script>
 	<script src="js/create_board.js"></script>
 	<script src="js/hw8_start.js"></script>
 </body>
