added the new resume. 01/02/2021

--- a/index.html
+++ b/index.html
@@ -256,10 +256,7 @@
                                 </div>
                             </div><!-- End off col-md-6  -->
                             <div class="portfolio_btn text-center fix m-top-100">
-                                <a href="https://harshypatel.github.io/website/resume/cs-resume-general.pdf" target="_blank" class="btn btn-primary"> Resume - General </a>
-                            </div>
-                            <div class="portfolio_btn text-center fix m-top-100">
-                                <a href="https://harshypatel.github.io/website/resume/cs-resume-front-end.pdf" target="_blank" class="btn btn-primary"> Resume - Front-End </a>
+                                <a href="https://harshypatel.github.io/website/resume/HarshP-Resume.pdf" target="_blank" class="btn btn-primary"> Resume </a>
                             </div>
                         </div>
                     </div><!-- End off row -->
