--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                             <div class="col-sm-6">
                                 <div class="home_text text-left">
                                     <h4>Harsh Patel</h4>
-                                    <h1 class="home_text"> Software Intern </h1>  <!-- text-black  home_text -->
+                                    <h1 class="home_text"> Software Engineering Intern </h1>  <!-- text-black  home_text -->
                                 </div>
 
                                 <div class="home_btns m-top-40 text-center">
@@ -157,8 +157,8 @@
                                         <h2>About me</h2>
                                     </div>
                                     <div class="about_content_text">
-                                        <p>I'm currently an undergrad at UMass Lowell. This is my last semester.
-					I am also working full-time as a software intern at RailPod Inc.
+                                        <p>I'm currently an undergrad at UMass Lowell.
+					I am also working full-time as a Software Engineering Intern at RailPod Inc.
 					</p>
 
                                         <div class="divider1 m-top-10"></div>
@@ -240,18 +240,19 @@
                                     </div>
 
                                     <div class="portfolio_content_text">
-					<h1> Software Intern </h1>
-                                        <p> Design, develop and deploy new product using Python or C++ for customers. <br>
-					Develop new tools to reduce workload of the team members. <br>
-					Work with development team to refine clearance data. </p>
-                                        <p> Optimized data collection procedures and generated reports daily <br>
-					Analyzed rail track data for safer measurements <br>
-					Presented findings and data to team to improve strategies and operations <br>
-					Used Amazon EC2 terminal to perform taks quickly and efficiently </p>
+					<h1> Software Engineering Intern </h1>
+                                        <p> ● Design, develop and implement end user tools to enable clients to a analyze and visualize live data
+					collected by autonomous railway inspection vehicles. Technologies: Python, PostgreSQL, Matplotlib </p>
+                                        <p> ● Participant in product development team as quality assurance member during product development, testing and release <br>
+					● Quality assurance of client facing data by validating Lidar and Track data <br>
+					● Collaborate with Product Development and Customer Support teams on bug resolution and fulfilling customer requirements. <br>
+					● Optimized data collection procedures and responsible for generating daily reports
+					● Presented findings and data to team to improve strategies and operations
+					● Used Amazon AWS EC2 terminal to perform tasks quickly and efficiently </p>
 					<h1> Peer Math Tutor </h1>
-					<p> Monitored Math Center activity for up to 15 students at time <br>
-					Explained in detail concepts in easy-to-understand terms <br>
-					Worked with students of various ages at different learning levels </p>
+					<p> ● Managed Math Center activity for up to 15 students at time <br>
+					● Employ knowledge of mathematical concepts to help students learn and understand topic areas and terms <br>
+					● Worked with students of various ages at different learning levels </p>
                                     </div>
                                 </div>
                             </div><!-- End off col-md-6  -->
@@ -379,7 +380,7 @@
                                         <div class="author_text text-right">
                                             <h5>Regards!</h5>
                                             <h1> Harsh Patel </h1>
-                                            <h6> Software Intern </h6>
+                                            <h6> Software Engineering Intern </h6>
                                         </div>
                                         <div class="copyright text-right m-top-80">
                                             <p class="wow fadeInRight">Made by<a href="https://bootstrapthemes.co" target="_blank">Bootstrap Themes</a>2016. All Rights Reserved</p>
