--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@
                                         <p> ● Participant in product development team as quality assurance member during product development, testing and release <br>
 					● Quality assurance of client facing data by validating Lidar and Track data <br>
 					● Collaborate with Product Development and Customer Support teams on bug resolution and fulfilling customer requirements. <br>
-					● Optimized data collection procedures and responsible for generating daily reports
-					● Presented findings and data to team to improve strategies and operations
+					● Optimized data collection procedures and responsible for generating daily reports <br>
+					● Presented findings and data to team to improve strategies and operations <br>
 					● Used Amazon AWS EC2 terminal to perform tasks quickly and efficiently </p>
 					<h1> Peer Math Tutor </h1>
 					<p> ● Managed Math Center activity for up to 15 students at time <br>
