--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@
                                     <div class="portfolio_content_text">
 					<h1> Software Engineering Intern </h1>
                                         <p> ● Design, develop and implement end user tools to enable clients to a analyze and visualize live data
-					collected by autonomous railway inspection vehicles. Technologies: Python, PostgreSQL, Matplotlib </p>
-                                        <p> ● Participant in product development team as quality assurance member during product development, testing and release <br>
+					collected by autonomous railway inspection vehicles. Technologies: Python, PostgreSQL, Matplotlib <br>
+                                        ● Participant in product development team as quality assurance member during product development, testing and release <br>
 					● Quality assurance of client facing data by validating Lidar and Track data <br>
 					● Collaborate with Product Development and Customer Support teams on bug resolution and fulfilling customer requirements. <br>
 					● Optimized data collection procedures and responsible for generating daily reports <br>
