--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                             <div class="col-sm-6">
                                 <div class="home_text text-left">
                                     <h4>Harsh Patel</h4>
-                                    <h1 class="home_text"> Software Engineering Intern </h1>  <!-- text-black  home_text -->
+                                    <h1 class="home_text"> Cloud Engineer </h1>  <!-- text-black  home_text -->
                                 </div>
 
                                 <div class="home_btns m-top-40 text-center">
@@ -157,8 +157,8 @@
                                         <h2>About me</h2>
                                     </div>
                                     <div class="about_content_text">
-                                        <p>I'm currently an undergrad at UMass Lowell.
-					I am also working full-time as a Software Engineering Intern at RailPod Inc.
+                                        <p>Cloud Engineer with over two years of experience troubleshooting, managing, updating software assets, 
+					supporting IT infrastructures, and administering cloud services.
 					</p>
 
                                         <div class="divider1 m-top-10"></div>
@@ -172,6 +172,7 @@
                                         <div class="about_content_item m-top-20">
                                             <h6><i class="fa fa-briefcase"></i> Work Experiences</h6>
                                             <ul>
+						<li><i class="fa fa-chevron-right"></i> UKG | 2021</li>
                                                 <li><i class="fa fa-chevron-right"></i> RailPod Inc. | 2019</li>
                                                 <li><i class="fa fa-chevron-right"></i> Peer Math Tutor, Middlesex Community College | 2018</li>
                                                 <li><i class="fa fa-chevron-right"></i> Market Basket | 2015</li>
@@ -274,7 +275,7 @@
                             <div class="col-md-5">
                                 <div class="choose_item">
                                     <div class="head_right">
-                                        <h2> Homework </h2>
+                                        <h2> School Projects </h2>
                                     </div>
                                 </div>
                             </div> <!-- End off col-md-6 -->
@@ -286,7 +287,7 @@
                                             <i class="fa fa-book"></i>
                                         </div>
                                         <div class="list_item_text">
-                                            <h5><a href="http://harshypatel.github.io/website/hw2/old_index.html" target="_blank" class="btn btn-primary"> Homework 2 </a> </h5>
+                                            <h5><a href="http://harshypatel.github.io/website/hw2/old_index.html" target="_blank" class="btn btn-primary"> Website V1.0 </a> </h5>
                                         </div>
                                     </div>
                                     <div class="choose_list_item fix m-top-40">
@@ -294,7 +295,7 @@
                                             <i class="fa fa-book"></i>
                                         </div>
                                         <div class="list_item_text">
-                                            <h5><a href="http://harshypatel.github.io/website/hw3/index.html" target="_blank" class="btn btn-primary"> Homework 3 </a> </h5>
+                                            <h5><a href="http://harshypatel.github.io/website/hw3/index.html" target="_blank" class="btn btn-primary"> Pacific Trails Resort </a> </h5>
                                         </div>
                                     </div>
                                     <div class="choose_list_item fix m-top-40">
@@ -302,7 +303,7 @@
                                             <i class="fa fa-book"></i>
                                         </div>
                                         <div class="list_item_text">
-                                            <h5><a href="http://harshypatel.github.io/website" target="_blank" class="btn btn-primary"> Homework 4 </a> </h5>
+                                            <h5><a href="http://harshypatel.github.io/website" target="_blank" class="btn btn-primary"> Website V2.0 </a> </h5>
                                         </div>
                                     </div>
 				    <div class="choose_list_item fix m-top-40">
@@ -310,7 +311,7 @@
                                             <i class="fa fa-book"></i>
                                         </div>
                                         <div class="list_item_text">
-                                            <h5><a href="https://harshypatel.github.io/website/hw5/index.html" target="_blank" class="btn btn-primary"> Homework 5 </a> </h5>
+                                            <h5><a href="https://harshypatel.github.io/website/hw5/index.html" target="_blank" class="btn btn-primary"> Multiplication Table </a> </h5>
                                         </div>
                                     </div>
 				    <div class="choose_list_item fix m-top-40">
@@ -318,7 +319,7 @@
                                             <i class="fa fa-book"></i>
                                         </div>
                                         <div class="list_item_text">
-                                            <h5><a href="https://harshypatel.github.io/website/hw6/index.html" target="_blank" class="btn btn-primary"> Homework 6 </a> </h5>
+                                            <h5><a href="https://harshypatel.github.io/website/hw6/index.html" target="_blank" class="btn btn-primary"> Multiplication Table V2 </a> </h5>
                                         </div>
                                     </div>
 				    <div class="choose_list_item fix m-top-40">
@@ -326,7 +327,7 @@
                                             <i class="fa fa-book"></i>
                                         </div>
                                         <div class="list_item_text">
-                                            <h5><a href="https://harshypatel.github.io/website/hw7/index.html" target="_blank" class="btn btn-primary"> Homework 7 </a> </h5>
+                                            <h5><a href="https://harshypatel.github.io/website/hw7/index.html" target="_blank" class="btn btn-primary"> Multiplication Table V3 </a> </h5>
                                         </div>
                                     </div>
 				    <div class="choose_list_item fix m-top-40">
@@ -334,7 +335,7 @@
                                             <i class="fa fa-book"></i>
                                         </div>
                                         <div class="list_item_text">
-                                            <h5><a href="https://harshypatel.github.io/website/hw8/index.html" target="_blank" class="btn btn-primary"> Homework 8 </a> </h5>
+                                            <h5><a href="https://harshypatel.github.io/website/hw8/index.html" target="_blank" class="btn btn-primary"> Scrabble </a> </h5>
                                         </div>
                                     </div>
                                 </div>
@@ -380,7 +381,7 @@
                                         <div class="author_text text-right">
                                             <h5>Regards!</h5>
                                             <h1> Harsh Patel </h1>
-                                            <h6> Software Engineering Intern </h6>
+                                            <h6> Cloud Engineer </h6>
                                         </div>
                                         <div class="copyright text-right m-top-80">
                                             <p class="wow fadeInRight">Made by<a href="https://bootstrapthemes.co" target="_blank">Bootstrap Themes</a>2016. All Rights Reserved</p>
