--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                                     <h5><span class="divider"></span> my name is Harsh Patel</h5>
                                 </div>
                                 <div class="about_left_item m-top-50">
-                                    <img src="assets/images/about-img1.JPG" alt="" />
+                                    <img src="assets/images/about_me.JPEG" alt="" />
                                 </div>
 
                                 <div class="about_social m-top-50">
