--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         <div class="main_home">
                             <div class="col-sm-6">
                                 <div class="home-shadow text-right">
-                                    <img src="assets/images/1000004694.JPEG" alt="" />
+                                    <img src="assets/images/shadow-img.png" alt="" />
                                 </div>
                             </div>
                             <div class="col-sm-6">
