--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                 </div>
                             </div>
                             <div class="col-sm-6">
-                                <div class="home_text text-left">
+                                <div class="home_text text-right">
                                     <h4>Harsh Patel</h4>
                                     <h1 class="home_text"> Cloud Engineer </h1>  <!-- text-black  home_text -->
                                 </div>
