--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             <li><a href="#home">Home</a></li>
                             <li><a href="#about">About</a></li>
                             <li><a href="#portfolio">Work Experience</a></li>   <!-- portfolio > Work Experience -->
-                            <li><a href="#choose">Homework</a></li>				<!-- Choose > Homework -->
+                            <li><a href="#choose">Projects</a></li>				<!-- Choose > Homework -->
                             <li><a href="#contact">Contact Me</a></li>
                         </ul>
                     </div>
@@ -126,6 +126,10 @@
 
                                 <div class="home_btns m-top-40 text-center">
                                     <a href="#about" class="btn btn-primary m-top-20">About Me</a>
+                                </div>
+
+                                <div class="home_btns m-top-40 text-center"> <!-- portfolio_btn text-center fix m-top-100 -->
+                                    <a href="https://harshypatel.github.io/website/resume/cloud_engineer_hp_2023.pdf" target="_blank" class="btn btn-primary"> Resume </a>
                                 </div>
 
                                 <a class="mouse-scroll" href="#about">
@@ -157,7 +161,7 @@
                                         <h2>About me</h2>
                                     </div>
                                     <div class="about_content_text">
-                                        <p>Cloud Engineer with over two years of experience troubleshooting, managing, updating software assets, 
+                                        <p>Cloud Engineer with over two years of experience troubleshooting, managing, updating software assets,
 					supporting IT infrastructures, and administering cloud services.
 					</p>
 
@@ -166,13 +170,14 @@
                                         <div class="about_content_item m-top-30">
                                             <h6><i class="fa fa-graduation-cap"></i> Education</h6>
                                             <ul>
-                                                <li><i class="fa fa-chevron-right"></i>University of Massachusetts, Lowell, MA</a></li>
+                                                <li><i class="fa fa-chevron-right"></i> University of Massachusetts, Lowell, MA </li>
+                                                <li> ● Bachelor of Science in Computer Science </li>
                                             </ul>
                                         </div>
                                         <div class="about_content_item m-top-20">
                                             <h6><i class="fa fa-briefcase"></i> Work Experiences</h6>
                                             <ul>
-						<li><i class="fa fa-chevron-right"></i> UKG | 2021</li>
+						                                    <li><i class="fa fa-chevron-right"></i> UKG | 2021</li>
                                                 <li><i class="fa fa-chevron-right"></i> RailPod Inc. | 2019</li>
                                                 <li><i class="fa fa-chevron-right"></i> Peer Math Tutor, Middlesex Community College | 2018</li>
                                                 <li><i class="fa fa-chevron-right"></i> Market Basket | 2015</li>
@@ -183,9 +188,9 @@
                             </div><!-- End off col-md-6 -->
 
                             <div class="col-md-5 col-md-offset-1 sm-m-top-50">
-                                <div class="head_title text-right">
+                              <!--  <div class="head_title text-right">
                                     <h5><span class="divider"></span> my name is Harsh Patel</h5>
-                                </div>
+                                </div>-->
                                 <div class="about_left_item m-top-50">
                                     <img src="assets/images/about_me.JPEG" alt="" />
                                 </div>
@@ -214,12 +219,18 @@
                         <div class="main_portfolio">
                             <div class="col-md-5">
                                 <div class="portfolio_item">
-                                    <div class="head_title">
+                                  <!--  <div class="head_title">
                                         <h5><span class="divider"></span> my latest works</h5>
-                                    </div>
+                                    </div> -->
                                     <div class="row m-top-60">
-                                        <div class="col-sm-6">
-                                            <div class="portf_item_text photography">
+                                      <div class="col-sm-7">
+                                          <div class="portf_item_text photography">
+                                              <a href="https://ukg.com/" target="_blank"><img src="assets/images/ukg.png" alt="" /></a>
+                                              <h5 class="m-top-30"> UKG </h5>
+                                          </div>
+                                      </div>
+                                        <div class="col-sm-7">
+                                            <div class="portf_item_text branding xs-m-top-20">
                                                 <a href="https://rail-pod.com/" target="_blank"><img src="assets/images/portfolio-1.png" alt="" /></a>
                                                 <h5 class="m-top-30"> RailPod Inc. </h5>
                                             </div>
@@ -241,25 +252,36 @@
                                     </div>
 
                                     <div class="portfolio_content_text">
-					<h1> Software Engineering Intern </h1>
+                                        <h1> Cloud Engineer </h1>
+                                        <p>
+                                          ● Responsible for deployment, configuration, and maintenance of hosted applications (Google Cloud
+                                            Platform)<br>
+                                          ● Manage and perform RCA for services downtimes by administering extensive diagnostics like thread dump
+                                            and heap dump.<br>
+                                          ● Resolve client incidents as well as internal cases in a timely manner.<br>
+                                          ● Create SQL Scripts to automate tasks for internal use.<br>
+                                          ● Collaborate with engineers to standardize and document standard operating procedures for external use.<br>
+                                          ● Perform API calls using Postman for functional tests, integration tests and regression tests.<br>
+                                          ● Implement advance troubleshooting dashboards using Grafana and Splunk</p><br><br><br>
+					                              <h1> Software Engineering Intern </h1>
                                         <p> ● Design, develop and implement end user tools to enable clients to a analyze and visualize live data
-					collected by autonomous railway inspection vehicles. Technologies: Python, PostgreSQL, Matplotlib <br>
-                                        ● Participant in product development team as quality assurance member during product development, testing and release <br>
-					● Quality assurance of client facing data by validating Lidar and Track data <br>
-					● Collaborate with Product Development and Customer Support teams on bug resolution and fulfilling customer requirements. <br>
-					● Optimized data collection procedures and responsible for generating daily reports <br>
-					● Presented findings and data to team to improve strategies and operations <br>
-					● Used Amazon AWS EC2 terminal to perform tasks quickly and efficiently </p>
-					<h1> Peer Math Tutor </h1>
-					<p> ● Managed Math Center activity for up to 15 students at time <br>
-					● Employ knowledge of mathematical concepts to help students learn and understand topic areas and terms <br>
-					● Worked with students of various ages at different learning levels </p>
+					                                     collected by autonomous railway inspection vehicles. Technologies: Python, PostgreSQL, Matplotlib <br>
+                                             ● Participant in product development team as quality assurance member during product development, testing and release <br>
+					                                   ● Quality assurance of client facing data by validating Lidar and Track data <br>
+	                                           ● Collaborate with Product Development and Customer Support teams on bug resolution and fulfilling customer requirements. <br>
+                                             ● Optimized data collection procedures and responsible for generating daily reports <br>
+                                             ● Presented findings and data to team to improve strategies and operations <br>
+                                             ● Used Amazon AWS EC2 terminal to perform tasks quickly and efficiently </p><br><br><br>
+                              					<h1> Peer Math Tutor </h1>
+                              					<p> ● Managed Math Center activity for up to 15 students at time <br>
+                                  					● Employ knowledge of mathematical concepts to help students learn and understand topic areas and terms <br>
+                                  					● Worked with students of various ages at different learning levels </p>
                                     </div>
                                 </div>
                             </div><!-- End off col-md-6  -->
-                            <div class="portfolio_btn text-center fix m-top-100">
+                            <!--<div class="portfolio_btn text-center fix m-top-100">
                                 <a href="https://harshypatel.github.io/website/resume/cloud_engineer_hp_2023.pdf" target="_blank" class="btn btn-primary"> Resume </a>
-                            </div>
+                            </div> -->
                         </div>
                     </div><!-- End off row -->
                 </div><!-- End off container -->
@@ -282,7 +304,7 @@
 
                             <div class="col-md-4 col-md-offset-1 sm-m-top-50">
                                 <div class="choose_list fix">
-                                    <div class="choose_list_item fix">
+                                    <div class="choose_list_item fix m-top-20">
                                         <div class="choose_icon">
                                             <i class="fa fa-book"></i>
                                         </div>
@@ -290,7 +312,7 @@
                                             <h5><a href="http://harshypatel.github.io/website/hw2/old_index.html" target="_blank" class="btn btn-primary"> Website V1.0 </a> </h5>
                                         </div>
                                     </div>
-                                    <div class="choose_list_item fix m-top-40">
+                                    <div class="choose_list_item fix m-top-20">
                                         <div class="choose_icon">
                                             <i class="fa fa-book"></i>
                                         </div>
@@ -298,7 +320,7 @@
                                             <h5><a href="http://harshypatel.github.io/website/hw3/index.html" target="_blank" class="btn btn-primary"> Pacific Trails Resort </a> </h5>
                                         </div>
                                     </div>
-                                    <div class="choose_list_item fix m-top-40">
+                                    <div class="choose_list_item fix m-top-20">
                                         <div class="choose_icon">
                                             <i class="fa fa-book"></i>
                                         </div>
@@ -306,7 +328,7 @@
                                             <h5><a href="http://harshypatel.github.io/website" target="_blank" class="btn btn-primary"> Website V2.0 </a> </h5>
                                         </div>
                                     </div>
-				    <div class="choose_list_item fix m-top-40">
+				                                <div class="choose_list_item fix m-top-20">
                                         <div class="choose_icon">
                                             <i class="fa fa-book"></i>
                                         </div>
@@ -314,7 +336,7 @@
                                             <h5><a href="https://harshypatel.github.io/website/hw5/index.html" target="_blank" class="btn btn-primary"> Multiplication Table </a> </h5>
                                         </div>
                                     </div>
-				    <div class="choose_list_item fix m-top-40">
+				                                <div class="choose_list_item fix m-top-20">
                                         <div class="choose_icon">
                                             <i class="fa fa-book"></i>
                                         </div>
@@ -322,7 +344,7 @@
                                             <h5><a href="https://harshypatel.github.io/website/hw6/index.html" target="_blank" class="btn btn-primary"> Multiplication Table V2 </a> </h5>
                                         </div>
                                     </div>
-				    <div class="choose_list_item fix m-top-40">
+				                                <div class="choose_list_item fix m-top-20">
                                         <div class="choose_icon">
                                             <i class="fa fa-book"></i>
                                         </div>
@@ -330,7 +352,7 @@
                                             <h5><a href="https://harshypatel.github.io/website/hw7/index.html" target="_blank" class="btn btn-primary"> Multiplication Table V3 </a> </h5>
                                         </div>
                                     </div>
-				    <div class="choose_list_item fix m-top-40">
+				                                <div class="choose_list_item fix m-top-20">
                                         <div class="choose_icon">
                                             <i class="fa fa-book"></i>
                                         </div>
